feat: explaining meaning